feat: add customer service

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ JWT_SECRET=mcabank-secret
 SERVICE_PORT=50052
 SERVER_PORT=:5002
 AUTH_GRPC_SERVICE=localhost:50051
+PAYMENT_GRPC_SERVICE=localhost:50053
