feat: update auth grpc endpoint

--- a/Infrastructure/K8s/mcabank-customer.yaml
+++ b/Infrastructure/K8s/mcabank-customer.yaml
@@ -36,7 +36,7 @@ spec:
             - name: SERVER_PORT
               value: ":5002"
             - name: AUTH_GRPC_SERVICE
-              value: "localhost:50051"
+              value: "mcabank-auth-grpc.default.svc.cluster.local:50051"
             - name: PAYMENT_GRPC_SERVICE
               value: "localhost:50053"
 ---
