--- a/Infrastructure/K8s/mcabank-customer.yaml
+++ b/Infrastructure/K8s/mcabank-customer.yaml
@@ -38,7 +38,7 @@ spec:
             - name: AUTH_GRPC_SERVICE
               value: "mcabank-auth-grpc.default.svc.cluster.local:50051"
             - name: PAYMENT_GRPC_SERVICE
-              value: "localhost:50053"
+              value: "mcabank-payment-grpc.default.svc.cluster.local:50053"
 ---
 apiVersion: v1
 kind: Service
