feat: add telemetry

--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ SERVICE_PORT=50052
 SERVER_PORT=:5002
 AUTH_GRPC_SERVICE=localhost:50051
 PAYMENT_GRPC_SERVICE=localhost:50053
+OTEL_EXPORTER_OTLP_ENDPOINT=localhost:4317
+OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+OTEL_EXPORTER_OTLP_INSECURE=true
+OTEL_SERVICE_NAME=mcabank-customer
+
